<resources>
    <string name="app_name">MHIS</string>
    <string name="mhis">MHIS - Medicine Hospital Information System</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="login">Bejelentkezés</string>
    <string name="userDatas">Személyes adatok</string>
    <string name="medicine">Gyógyszer rendező</string>
    <string name="doctorSearch">Orvosok keresése</string>
    <string name="settings">Beállítások</string>
    <string name="exit">Kilépés</string>

    <string name="user">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="diary">Naptár</string>
    <string name="contact">Kapcsolat</string>
    <string name="phone">Telefonszám:</string>
    <string name="phoneNumber">+36 00 00 00 000</string>
    <string name="mhisEmail">mh.is@mhis.hu</string>
    <string name="address">Cím:</string>
    <string name="mhisAddress">0000 Budapest, Példa utca 1</string>
    <string name="email">Email cím:</string>
    <string name="about">Rólunk</string>
    <string name="aboutUs">Az MHIS csapatának célja, hogy a felhasználók minél hamarabb feltudják venni a kapcsolatot orvosaikkal.</string>
    <string name="web">Kérjük vegye igénybe online szolgátatásainkat is! Látogasson el a www.mhis.hu oldalra leleteinek megtekintéséhez!</string>

</resources>