<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_diary">

    <fragment
        android:id="@+id/nav_diary"
        android:name="com.example.mhis.ui.medicine.MedicineFragment"
        android:label="@string/diary"
        tools:layout="@layout/fragment_medicine" />

    <fragment
        android:id="@+id/nav_doctors"
        android:name="com.example.mhis.ui.doctors.DoctorFragment"
        android:label="@string/doctorSearch"
        tools:layout="@layout/fragment_doctors" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.mhis.ui.contact.ContactFragment"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_about"
        android:label="@string/contact"
        tools:layout="@layout/fragment_about" />


</navigation>